--- a/covid plotter.ipynb
+++ b/covid plotter.ipynb
@@ -40,7 +40,7 @@
     "#normalize by population?\n",
     "norm=False\n",
     "#log scale?\n",
-    "log_scale=True\n",
+    "log_scale=False\n",
     "#show state population in legend?\n",
     "leg_pop=False\n",
     "#how many graphs?\n",
